# ReqSystem

./: README.md  main.py  pyproject.toml
backend/: config.py  main.py
backend/agents/: analyzer.py  base_agent.py  collector.py  generator.py
backend/api/routes/: cdc.py  sessions.py
backend/models/: cdc.py  session.py  sessions.py
backend/orchestrator/: coordinator.py
backend/utils/: docx_exporter.py  llm_client.py  pdf_exporter.py
frontend/src/: App.css  App.js
frontend/src/components/forms/: ClientForm.css  ClientForm.js
frontend/src/components/shared/: Navbar.js
frontend/src/components/viewer/: CDCViewer.css  CDCViewer.js  ExportButtons.css  ExportButtons.js
frontend/src/pages/: HomePage.css  HomePage.js  LandingPage.css  LandingPage.js  ResultPage.css  ResultPage.js  SessionPage.css  SessionPage.js
frontend/src/services/: api.js
frontend/src/styles/: global.css  tokens.css
