[project]
name = "reqsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "uvicorn>=0.47.0",
]
